--- a/assets/css/templates/_home.scss
+++ b/assets/css/templates/_home.scss
@@ -135,6 +135,11 @@
         line-height: 36px;
     }
 
+    .main-hello {
+        font-size: 46px;
+        line-height: 50px;
+    }
+
     .home-hello__img {
         width: 50%;
         max-width: 200px;
@@ -185,6 +190,11 @@
     .home__hello {
         font-size: 38px;
         line-height: 40px;
+    }
+
+    .main-hello {
+        font-size: 50px;
+        line-height: 54px;
     }
 
     .home-hello__img {
